--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-project",
-  "homepage": "http://Imenturki0.github.io/My-Portfolio",
+  "homepage": "https://my-portfolio-git-master-imenturki0.vercel.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
