--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-project",
-  "homepage": "https://my-portfolio-git-master-imenturki0.vercel.app",
+  "homepage": "http://Imenturki0.github.io/My-Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,19 +12,24 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-intersection-observer": "^9.5.2",
     "react-pdf": "^7.1.2",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-type-animation": "^3.1.0",
+    "react-typed": "^1.2.0",
     "swiper": "^9.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
